# islamic_search

./: .gitignore  README.md  pyproject.toml
data_src/: quran.ipynb
training/: Train_a_language_model.ipynb  embedding_fine_tuning.ipynb
